syntax = "proto3";

package notification;

service NotificationService {
    rpc sendNotification(NotificationRequest) returns (NotificationResponse);
}

message NotificationRequest {
    string userId = 1;
    string message = 2;
}

message NotificationResponse {
    bool success = 1;
}
